# ashvale

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
include/core/: error.h
src/: main.c
